--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,5 +10,7 @@
     <div id="root"></div>
     <div id="modal"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://apis.google.com/js/api:client.js"></script>
+    <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
   </body>
 </html>
